--- a/config/uscan.service
+++ b/config/uscan.service
@@ -1,7 +1,7 @@
 <?xml version="1.0" standalone='no'?><!--*-nxml-*-->
 <!DOCTYPE service-group SYSTEM "avahi-service.dtd">
 <service-group>
-<name replace-wildcards="yes">AirScanning @ %h</name>
+<name replace-wildcards="yes">AirScan@%h</name>
 <service>
 <type>_uscan._tcp</type>
 <port>80</port>
@@ -12,9 +12,9 @@
 <txt-record>representation=http://raspberrypi.local/images/AirScanIcon2.png</txt-record>
 <txt-record>vers=2.5</txt-record>
 <txt-record>adminurl=http://raspberrypi.local/airscan.php</txt-record>
-<txt-record>note=AirScanning</txt-record>
+<txt-record>note=AirScan</txt-record>
 <txt-record>pdl=application/octet-stream,image/jpeg,application/pdf</txt-record>
-<txt-record>ty=AirScanning</txt-record>
+<txt-record>ty=AirScan</txt-record>
 <txt-record>txtvers=1</txt-record>
 </service>
 </service-group>
